--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+System config and info written in Ruby.
+I tested it on Ruby 1.8.7 and Mongrel from Debian Sid repository.
+
+You can also find more themes for sysconfig-ruby on github - check sysconfig-ruby-themes. : )
 
