--- a/README.textile
+++ b/README.textile
@@ -1,29 +1,29 @@
-================================================================
-===========================          ===========================
-======================== SYSCONFIG-RUBY ========================
-===========================          ===========================
-================================================================
+h1. Sysconfig-Ruby
+
+h2. List of contents
+
+# Info
+# Installation
+# Starting
+# Themes
 
 
+h2. (1) Info
 
-1. Info
-2. Installation
-3. Starting
-4. Themes
-5. Plugins
-----------------------------------------------------------------
+System config and info written in Ruby. Project is available on Github - Sysconfig-ruby.
 
-1. System config and info written in Ruby. Project is available on Github - Sysconfig-ruby.
-----------------------------------------------------------------
 
-2. I tested it on:
+h2. (2) Installation
+
+I tested it on:
   * Ruby 1.8.7 with Mongrel 1.1.5
   
-I recommend Ruby 1.8.7 : )
 ----------------------------------------------------------------
 
-3. If you have ruby and mongrel now, you should only run script:
-  ruby sysconfig.rb Template_name Port Host
+h2. (3) Starting
+
+If you have ruby and mongrel now, you should only run script:
+  ruby sysconfig.rb Port Template_name Host
 example:
   ruby sysconfig.rb 1234 default 0.0.0.0
 
@@ -33,8 +33,8 @@ Default theme: default
 Default host: 0.0.0.0
 ----------------------------------------------------------------
 
-4. If you want (Yes, you want) more themes, you can find them on github - search sysconfig-ruby-themes ; ]
+h2. (4) Themes
+
+All themes are in `themes` directory in this project. If you want, you can send me your theme : )
 ----------------------------------------------------------------
 
-5. Oops. Not implemented yet.
-----------------------------------------------------------------
